--- a/src/Components/CustomerForm/Grid/Filter/ActionBar.scss
+++ b/src/Components/CustomerForm/Grid/Filter/ActionBar.scss
@@ -21,7 +21,7 @@
       align-items: center;
 
       .toggle-group {
-        background: #e8e7e7;
+        background: #e8e7e7a6;
         padding: 5px;
         gap: 10px;
         width: 220px;
