--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	padding: 0;
 	font-display: swap;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 code {
