working on employer form

--- a/src/Theme/variable.scss
+++ b/src/Theme/variable.scss
@@ -7,6 +7,7 @@ $primary-gradient: linear-gradient(270deg, rgba(115, 103, 240, 0.7) 0%, #7367f0 
 $paper-shadow-value: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 $transition-duration: 200ms;
 $box-shadow-value: rgba(0, 0, 0, 0.05) 0px 6px 24px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
+$border-color: #e0e0e0;
 
 .textfieldsClass {
     font-size: 14px;
