working on manufacture management

--- a/src/Theme/variable.scss
+++ b/src/Theme/variable.scss
@@ -8,6 +8,8 @@ $paper-shadow-value: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(
 $transition-duration: 200ms;
 $box-shadow-value: rgba(0, 0, 0, 0.05) 0px 6px 24px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
 $border-color: #e0e0e0;
+$danger-color: #dc3545;
+$titleColor:"#424242";
 
 .textfieldsClass {
     font-size: 14px;
